--- a/index-en.html
+++ b/index-en.html
@@ -17,7 +17,7 @@
     <div class="container">
         <!-- Бокова панель -->
         <aside class="sidebar">
-            <img class="pick-sidebar" src="./img/Pick.png" alt="Фото профілю" height="200" width="280">
+            <img class="pick-sidebar" src="./img/Portfolio_photo_new.jpg" alt="Фото профілю" height="200" width="280">
 
             <section class="contact">
                 <h3 class="title-contact">Contact me</h3>
@@ -28,6 +28,7 @@
             <section class="contact">
                 <h3 class="title-contact">Additional information</h3>
                 <ul>
+                    <li>Driving Licence</li>
                     <li>Responsible approach to work</li>
                     <li>Working for results</li>
                     <li>Persistence</li>
@@ -56,6 +57,7 @@
                 <h3 class="title">Additional education</h3>
                 <ul>
                     <li>Basic knowledge in the areas of: HTML, CSS, JavaScript, C++, SQL, Excel</li>
+                    <li>Knowledge of the OSI model and the TCP/IP networking protocol stack.</li>
                     <li>Video editing skills for YouTube</li>
                     <li>Basic knowledge Photoshop</li>
                     <li>Language: Ukrainian, Russian, English (Pre-Intermediate / Intermediate)</li>
