--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <!-- Бокова панель -->
         <aside class="sidebar">
-            <img class="pick-sidebar" src="./img/Pick.png" alt="Фото профілю" height="200" width="280">
+            <img class="pick-sidebar" src="./img/Portfolio_photo_new.jpg" alt="Фото профілю" height="200" width="280">
 
             <section class="contact">
                 <h3 class="title-contact">Зв'язатись зі мною</h3>
@@ -28,6 +28,7 @@
             <section class="contact">
                 <h3 class="title-contact">Додаткова інформація</h3>
                 <ul>
+                    <li>Водійське посвідчення</li>
                     <li>Відповідальний підхід до роботи</li>
                     <li>Робота на результат</li>
                     <li>Наполегливість</li>
@@ -53,10 +54,11 @@
                     <li>Рік закінчення навчання - 2024</li>
                 </ul>
 
-                <h3 class="title">Додаткова освіта</h3>
+                <h3 class="title">Додаткові навички</h3>
                 <ul>
-                    <li>Базові знання у сферах: HTML, CSS, JavaScript, C++, SQL, Excel</li>
-                    <li>Навички з відеомонтажу для YouTube (власний канал)</li>
+                    <li>Навичики у використанні: HTML, CSS, JavaScript, C++, SQL, Exel</li>
+                    <li>Ознайомлений із моделлю OSI та стеком мережевих протоколів TCP/IP.</li>
+                    <li>Навички з відеомонтажу для YouTube</li>
                     <li>Базові навички Photoshop</li>
                     <li>Володіння мовами: українська, російська, англійська (Pre-Intermediate / Intermediate)</li>
                 </ul>
