--- a/index-en.html
+++ b/index-en.html
@@ -10,8 +10,8 @@
 <body>
 
     <nav class="language-switcher">
-        <a href="index.html" class="lang-btn active">UA</a>
-        <a href="index-en.html" class="lang-btn">EN</a>
+        <a href="index.html" class="lang-btn ">UA</a>
+        <a href="index-en.html" class="lang-btn active">EN</a>
     </nav>
 
     <div class="container">
