--- a/index-en.html
+++ b/index-en.html
@@ -57,7 +57,7 @@
                 <h3 class="title">Additional education</h3>
                 <ul>
                     <li>Basic knowledge in the areas of: HTML, CSS, JavaScript, C++, SQL, Excel</li>
-                    <li>Knowledge of the OSI model and the TCP/IP networking protocol stack.</li>
+                    <li>Knowledge of the OSI model and the TCP/IP networking protocol stack</li>
                     <li>Video editing skills for YouTube</li>
                     <li>Basic knowledge Photoshop</li>
                     <li>Language: Ukrainian, Russian, English (Pre-Intermediate / Intermediate)</li>
