--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h3 class="title">Додаткові навички</h3>
                 <ul>
                     <li>Навичики у використанні: HTML, CSS, JavaScript, C++, SQL, Exel</li>
-                    <li>Ознайомлений із моделлю OSI та стеком мережевих протоколів TCP/IP.</li>
+                    <li>Ознайомлений із моделлю OSI та стеком мережевих протоколів TCP/IP</li>
                     <li>Навички з відеомонтажу для YouTube</li>
                     <li>Базові навички Photoshop</li>
                     <li>Володіння мовами: українська, російська, англійська (Pre-Intermediate / Intermediate)</li>
