--- a/index-en.html
+++ b/index-en.html
@@ -22,6 +22,7 @@
             <section class="contact">
                 <h3 class="title-contact">Contact me</h3>
                 <p class="text-contact">Tel : +38 095 365 85 30</p>
+                <p class="text-contact">Tel : 073 91 998 297</p>
                 <p class="text-contact">email: maxymlazko@gmail.com</p>
             </section>
 
